# beaches_back

./: .env  Cargo.toml
migrations/2025-02-20-220305_1/: up.sql
migrations/2025-04-07-113343_1/: up.sql
migrations/2025-04-07-180036_1/: up.sql
migrations/2025-04-21-093432_1/: up.sql
migrations/2025-04-21-094519_1/: up.sql
migrations/2025-05-02-122128_1/: up.sql
src/: api_error.rs  main.rs  routes.rs  schema.rs
src/models/: email.rs  mod.rs  other.rs  places.rs  user.rs
src/models/sql/: geo.sql  main.sql
src/utils/: auth.rs  mod.rs  reqwest.rs
src/views/: auth.rs  mod.rs  other_views.rs  places_views.rs  users_views.rs
