[package]
name = "beaches_back"
version = "1.0.1"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
actix-cors = "0.7.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-multipart = "0.4.0-beta.12" 
actix-form-data = "0.6.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
reqwest = "*"
derive_more = "0.99.5"
futures-util = "0.3.5"
futures = "0.3.21"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false